# Resona-V2

./: README.md  main.py  pyproject.toml  requirements.txt
app/: README.md  Resona.py  apiv1.py  main.py  record.py
